   3) tesselation shader parameter types GL.PATCH_VERTICES, GL.PATCH_DEFAULT_OUTER_LEVEL, GL.PATCH_DEFAULT_INNER_LEVEL.
   The first is mandatory for tesselation to work, the other two are optional and can be used on the OpenGL host side instead of
   writing the tesselation control shader.
   4) New vertex primitive type GL.PATCHES
 ! Renamed SetShaderParameter to SetGeometryShaderParameter to avoid confusion of what kind shader parameters belongs to.
 - Added VFS.GetLoadedArchives() -> { string archiveName1, string archiveName2 ... }
 - Added VFS.GetArchivePath(string archiveName1) -> string archivePathOnDisk
 - Added VFS.GetFileAbsolutePath(string vfsFilePath) -> string filePathOnDisk
 - Added VFS.GetArchiveContainingFile(string vfsFilePath) -> string archiveName
 - add a 6th return value (feature->reclaimTime) to GetFeatureResources.
 - Add `Spring.UnitFinishCommand(unitID)`, finishes current command. Unlike CMD.REMOVE it works with Repeat/UnitCmdDone
   and unlike CommandFallback it works on builtin engine commands. 
 - Allow spawning of any CEG from any LUS:
   EmitSfx(p, "cegTag") param will emit the CEG with tag="cegTag"
   EmitSfx(p, SFX.GLOBAL | cegID) will emit the CEG with id=cegID
   Added Spring.GetCEGID("cegTag") to get CEG id from tag
 - Added Spring.GetUnitCurrentCommand(unitID [, cmdIndex]) -> [cmdID, cmdOpts (coded), cmdTag[, cmdParam1[, cmdParam2 ... ]]]
   Returns the index-th command in the unit's queue (or nil). Note: cmdOpts are represented by a single number
   (usually a table otherwise), and params are returned on the stack as well. This function allocates no tables.
 ! make Spring.Get{Unit,Factory}Commands always expect a second argument
 ! Spring.GetTeamInfo: switched the last two return values around (incomeMultiplier is now 7th, customKeys is now 8th)
 - Added a second boolean parameter to Spring.Get{Player,Team}Info, if it is false the function will not return